Prevent overlapping terms when talk title is really long

--- a/app/src/components/TalkGridCell.scss
+++ b/app/src/components/TalkGridCell.scss
@@ -36,6 +36,7 @@
     background-color: rgba(255,255,255,0.8);
     height: 160px;
     cursor: pointer;
+    overflow: hidden;
   }
 
   .talk-terms {
@@ -70,7 +71,7 @@
 
   .talk-title {
     font-style: normal;
-    font-size: 1.2em;
+    font-size: 1.15em;
     margin: 0 0 0.3em;
     text-transform: none;
   }
